# gogaku_dl

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: rec_enjoy_simple_english.py  requirements.txt
gogaku_dl/: english.py  gogaku_dl.py
